# phto

./: .gitignore  CLAUDE.md  README.md  validate_png.h
database/include/database/: Database.h
database/test/: CMakeLists.txt
db/: create_db.sh  droptables.sql
imager/: .clang-format  .gitignore  ANALYSIS.md  CMakeLists.txt  main.cpp
imager/Interface/: IImage.h  IImageFactory.h  IRaw.h
imager/config/: CMakeLists.txt
imager/config/include/config/: Config.h
imager/config/src/: Config.cpp
imager/database/sample/: main.cpp
imager/database/src/: Database.cpp
imager/docs/plan/: 0001.INITIAL.md  0002.DATABASES.md  0003.PARALLELIZING.md  README.md
imager/imager/: CMakeLists.txt
imager/imager/include/imager/: ImageValidator.h  Imager.h  Types.h
imager/imager/include/imager/types/: Blob.h
imager/imager/sample/: CMakeLists.txt  config.toml.sample  main.cpp
imager/imager/src/: FileStorage.cpp  FileStorage.h  Hasher.cpp  Hasher.h  Imager.cpp  JpegValidatorImpl.cpp  MultiDatabase.cpp  MultiDatabase.h  PngValidatorImpl.cpp  Validators.h
imager/imager/src/coro/: BlockOn.h  Task.h  ThreadPool.h  WhenAll.h
imager/imager/test/: CMakeLists.txt  ImagerTest.cpp
imager/test/: DatabaseTest.cpp
imager/validations/jpeg/: jpeg_validator.cpp  jpeg_validator.h
imager/validations/jpeg/test/: CMakeLists.txt
imager/validations/png/: README.md  validate_png.cpp
imager/validations/png/sample/: main.cpp
libjpeg/: CMakeLists.txt
libpng/: CMakeLists.txt
sample/: CMakeLists.txt  main.cpp
sql/: create_user.sh  crebas.sql
sqlite/: CMakeLists.txt
src/: Database.cpp
test/: test_jpeg_validator.cpp
tools/: csv_processor.py
validations/jpeg/: CLAUDE.md  CMakeLists.txt  README.md
validations/jpeg/libjpeg/: jconfig.h
validations/jpeg/test/: CMakeLists.txt
validations/png/: CLAUDE.md  CMakeLists.txt
validations/png/sample/: CMakeLists.txt
validations/png/test/: CMakeLists.txt  test_validate_png.cpp
