set(PNG_SHARED OFF CACHE BOOL "" FORCE)
set(PNG_STATIC ON CACHE BOOL "" FORCE)
set(PNG_TESTS OFF CACHE BOOL "" FORCE)
set(PNG_TOOLS OFF CACHE BOOL "" FORCE)
set(PNG_EXECUTABLES OFF CACHE BOOL "" FORCE)
set(PNG_FRAMEWORK OFF CACHE BOOL "" FORCE)
set(PNG_LIBCONF_HEADER
    "${CMAKE_CURRENT_SOURCE_DIR}/src/scripts/pnglibconf.h.prebuilt"
    CACHE FILEPATH "" FORCE)

add_subdirectory(src)
